src/objects/Marketing_Collateral__c.object
<CustomObject>
    <description>used by marketing to track customer experience programs including case studies, press releases, blog posts, articles, etc.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Marketing_Collateral</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collateral_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collateral Attached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Vertical__c</fullName>
        <formula>TEXT(Account__r.Vertical__c)</formula>
        <label>Customer Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Focus_Primary__c</fullName>
        <label>Focus - Primary</label>
        <picklist>
            <picklistValues>
                <fullName>Backup/Disaster Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InfoSight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SmartStack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VDI (Citrix)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VDI (Vmware)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Focus_Secondary__c</fullName>
        <label>Focus - Secondary</label>
        <picklist>
            <picklistValues>
                <fullName>Citrix XenApp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citrix XenDesktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citrix XenServer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Protection (CommVault)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Protection (Snapshots/Replication)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Protection (Veeam)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaster Recovery w/ VMware SRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InfoSight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Apps - Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Apps - Exchange/SQL/SharePoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Apps - SharePoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microsoft Apps - SQL Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SmartStack BCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SmartStack Data Protection (CommVault)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SmartStack Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SmartStack Private Cloud (Microsoft)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SmartStack VDI (Citrix)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SmartStack VDI (VMware)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Owner__c</fullName>
        <label>Program Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Amy Webb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anique Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gavin Cohen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graeme Rowe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ibby Rahmani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irina Baiasu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kristalle Cooks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matt Miller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michael Kieran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radhika Krishnan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sean Roth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheldon D&apos;Paiva</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <formula>TEXT(Account__r.Owner.Sales_Region__c)</formula>
        <label>Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solutions_Covered__c</fullName>
        <label>Solutions Covered</label>
        <picklist>
            <picklistValues>
                <fullName>Server Virtualization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Critical Applications</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>01 Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02 In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03 Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 Stalled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Advisory Board Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyst Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Article</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blog Post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logo on Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote for Press Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaking Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown / TBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>--------------</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <picklist>
            <picklistValues>
                <fullName>Federal Gov&apos;t</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State/Local Gov&apos;t</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AEC (architecture, engineering, construction)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerospace &amp; Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hi Tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership Organizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mining</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Customer Experience Program</label>
    <nameField>
        <label>Customer Experience Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Experience Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>